# distributed_systems_lab3

./: docker-compose.prod.yml  docker-compose.yml
.github/workflows/: deploy-v1.yml
postgres/: 20-create-databases.sh
scripts/: test-script.sh  wait-for.sh
v1/Bonus/: Dockerfile
v1/Bonus/app/: dependencies.py
v1/Bonus/app/db/: __init__.py  base.py  engine.py
v1/Bonus/app/db/models/: __init__.py  privilege.py  privilege_history.py
v1/Bonus/app/infrastructure/repositories/: __init__.py  privilege.py
v1/Bonus/app/logger/: __init__.py
v1/Bonus/app/presentation/api/: handlers.py  main.py  schemas.py
v1/Bonus/app/presentation/api/routers/: __init__.py  manage.py
v1/Bonus/app/presentation/api/routers/v1/: balance.py  me.py  users.py
v1/Bonus/app/services/: __init__.py  exceptions.py  privilege.py
v1/Bonus/tests/: conftest.py
v1/Bonus/tests/infrastructure/repositories/: test_privilege_repository.py
v1/Bonus/tests/presentation/api/routers/v1/: test_balance.py  test_me.py  test_users.py
v1/Bonus/tests/services/: test_privilege.py
v1/Flight/: Dockerfile  pyproject.toml
v1/Flight/app/: dependencies.py
v1/Flight/app/db/: engine.py
v1/Flight/app/db/models/: __init__.py  airport.py  flight.py
v1/Flight/app/infrastructure/repositories/: __init__.py  airport.py  flight.py
v1/Flight/app/presentation/api/: handlers.py  main.py  schemas.py
v1/Flight/app/presentation/api/routers/: __init__.py
v1/Flight/app/presentation/api/routers/v1/: airport.py  flight.py
v1/Flight/app/services/: __init__.py  airport.py  flight.py
v1/Flight/tests/: conftest.py
v1/Flight/tests/infrastructure/repositories/: test_airport.py  test_flight.py
v1/Flight/tests/services/: test_airport.py  test_flight.py
v1/Gateway/: Dockerfile  pyproject.toml
v1/Gateway/app/: dependencies.py
v1/Gateway/app/infrastructure/: circuit_breaker.py  refund_queue.py
v1/Gateway/app/infrastructure/connectors/: bonus.py  flight.py  ticket.py
v1/Gateway/app/presentation/api/: handlers.py  main.py  schemas.py
v1/Gateway/app/presentation/api/routers/: __init__.py
v1/Gateway/app/presentation/api/routers/v1/: balance.py  flights.py  me.py  privilege.py  tickets.py
v1/Gateway/app/services/: __init__.py  bonus.py  enums.py  exceptions.py  flight.py  ticket.py
v1/Gateway/tests/: conftest.py
v1/Gateway/tests/services/: test_bonus.py  test_flight.py  test_ticket.py
v1/Ticket/: Dockerfile  docker-compose.yml  pyproject.toml  ticket-service.yaml
v1/Ticket/app/: dependencies.py
v1/Ticket/app/db/: engine.py
v1/Ticket/app/db/models/: __init__.py  ticket.py
v1/Ticket/app/infrastructure/connectors/: bonus.py  gateway.py
v1/Ticket/app/infrastructure/repositories/: __init__.py  ticket.py
v1/Ticket/app/presentation/api/: handlers.py  main.py  schemas.py
v1/Ticket/app/presentation/api/routers/: __init__.py
v1/Ticket/app/presentation/api/routers/v1/: ticket.py
v1/Ticket/app/services/: __init__.py  enums.py  exceptions.py  ticket.py
v1/Ticket/tests/: conftest.py
v1/Ticket/tests/infrastructure/repositories/: test_ticket.py
v1/Ticket/tests/presentation/api/routers/v1/: test_ticket.py
v1/Ticket/tests/services/: test_ticket.py
